product details screen design and gradle updation

--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
@@ -27,13 +26,11 @@
             android:paddingTop="10dp"
             style="@style/AndroidImageSlider_Magnifier_Oval_Black"
             />
-
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal">
-
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
@@ -58,32 +55,27 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
     android:paddingRight="15dp"
     android:paddingTop="15dp"
     android:paddingBottom="15dp"
     android:paddingLeft="15dp">
         <TextView
-
             android:paddingRight="5dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:paddingLeft="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#3e2723"
-            android:text="Look knock-out on nights out in figure skimming bodycon fits, flowing maxi lengths and stunning sequin embellished occasion dresses. This season make for satin sheen slip dresses in mink nudes, and match lace trim cami dresses with barely there heels for that cocktail ready combo. If glitterball gowns aren't your thing, take to the dance floor in a tux dress for an all-eyes-on-you androgynous look."
+            android:text="Look knock-out on nights out in figure skimming bodycon fits, flowing maxi lengths and stunning sequin embellished occasion dresses. This season make for satin sheen slip dresses in mink nudes, and match lace trim cami dresses with barely there heels for that cocktail ready combo."
             android:id="@+id/description" />
-
 </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingRight="15dp"
-            android:paddingLeft="15dp"
-            >
+            android:paddingLeft="15dp">
             <TextView
                 android:paddingLeft="5dp"
                 android:layout_width="wrap_content"
@@ -93,6 +85,7 @@
                 android:textSize="30sp"
                 android:textIsSelectable="false"
                 android:textColor="#ffffff"
+                android:id="@+id/stock"
                 android:layout_toLeftOf="@+id/textView3"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
@@ -108,31 +101,59 @@
                 android:textIsSelectable="false"
                 android:textColor="#ffffff"
                 android:id="@+id/textView3" />
-
+            <TextView
+                android:paddingBottom="5dp"
+                android:paddingLeft="5dp"
+                android:layout_below="@+id/stock"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Designer: Name"
+                android:textIsSelectable="false"
+                android:textColor="@color/colorAccent"/>
         </RelativeLayout>
 
-
-
-        <TextView
-            android:paddingTop="5dp"
+<LinearLayout
+    android:paddingRight="5dp"
+    android:paddingTop="15dp"
+    android:paddingLeft="5dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:id="@+id/similarProducts">
+<TextView
+    android:paddingTop="5dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/similar_products"
+    android:textAppearance="?android:attr/textAppearanceLarge"
+    android:textColor="#ffea00"
+    android:textStyle="bold" />
+<View
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:background="#ffea00" />
+</LinearLayout>
+        <LinearLayout
+            android:paddingRight="5dp"
             android:paddingBottom="5dp"
+            android:paddingLeft="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="View Designer"
-            android:textIsSelectable="false"
-            android:textColor="#a7ffeb"
-            android:gravity="center"/>
-
-
-
-
-
-
-
-
-
-
-    </LinearLayout>
-    </ScrollView>
+            android:orientation="vertical"
+            android:id="@+id/relatedProducts">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/related_products"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#ffea00"
+                android:textStyle="bold" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#ffea00" />
+        </LinearLayout>
+</LinearLayout>
+</ScrollView>
 </RelativeLayout>
