--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="colorPrimary">#814112</color>
     <color name="colorPrimaryDark">#ffe0b2</color>
-    <color name="colorAccent">#b30133</color>
-    <color name="colorPrimaryLight">#f7b482</color>
+    <color name="colorAccent">#7C4DFF</color>
+    <color name="colorPrimaryLight">#fecda9</color>
 
     <color name="whiteBackground">#50ffffff</color>
     <color name="labelBackground">#7f7e57c2</color>
