--- a/app/src/main/res/drawable/bg.xml
+++ b/app/src/main/res/drawable/bg.xml
@@ -4,8 +4,8 @@
     <shape>
         <gradient
             android:angle="90"
-            android:startColor="@color/colorPrimaryLight"
-            android:endColor="@color/colorPrimary"
+            android:startColor="@color/primary_light"
+            android:endColor="@color/primary"
             android:type="linear" />
     </shape>
 </item>
