--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:animateLayoutChanges="true"
-    android:background="@drawable/bg"
+    android:background="@color/background"
     tools:context="com.tech.thrithvam.boutiqueapp.ItemDetails">
 <ScrollView
     android:layout_width="match_parent"
@@ -15,6 +16,13 @@
         android:layout_height="wrap_content"
         android:id="@+id/itemDetailsLinear"
         android:orientation="vertical">
+
+
+        <!--====================image slider======================-->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg">
         <com.daimajia.slider.library.SliderLayout
             android:id="@+id/itemImages"
             android:layout_width="match_parent"
@@ -24,13 +32,31 @@
             android:id="@+id/custom_indicator"
             android:layout_width="match_parent"
             android:paddingTop="10dp"
+            android:paddingBottom="5dp"
+            android:layout_below="@id/itemImages"
             style="@style/AndroidImageSlider_Magnifier_Oval_Black"
             />
+        </RelativeLayout>
+
+
+        <!--======================item details=======================-->
+<android.support.v7.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="7dp"
+    android:layout_marginRight="7dp"
+    app:cardCornerRadius="4dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/descriptionRelativeLayout">
         <LinearLayout
+            android:paddingTop="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:id="@+id/fav_share_buttons">
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
@@ -43,54 +69,49 @@
                 android:src="@drawable/share" />
         </LinearLayout>
         <TextView
+            android:layout_below="@+id/fav_share_buttons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="☆ $d people favorited it"
-            android:textSize="20sp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="☆ $d people favorites it"
             android:textIsSelectable="false"
-            android:textColor="#a7ffeb"
+            android:textColor="@color/secondary_text"
             android:id="@+id/favCount"
             android:gravity="center"/>
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingRight="15dp"
-    android:paddingTop="15dp"
-    android:paddingBottom="15dp"
-    android:paddingLeft="15dp">
+
         <TextView
+            android:layout_below="@id/favCount"
             android:paddingRight="5dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:paddingLeft="5dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="7dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#3e2723"
-            android:text="Look knock-out on nights out in figure skimming bodycon fits, flowing maxi lengths and stunning sequin embellished occasion dresses. This season make for satin sheen slip dresses in mink nudes, and match lace trim cami dresses with barely there heels for that cocktail ready combo."
+            android:textColor="@color/primary_text"
+            android:text="Look knock-out on nights out in figure skimming bodycon fits, flowing maxi lengths and stunning sequin occasion dresses. This season make for satin sheen slip dresses in mink nudes, and match lace trim cami dresses with barely there heels for that cocktail ready combo."
             android:id="@+id/description" />
-</RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingRight="15dp"
-            android:paddingLeft="15dp">
+
+
             <TextView
-                android:paddingLeft="5dp"
+                android:layout_below="@+id/description"
+                android:paddingRight="15dp"
+                android:paddingLeft="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="In Stock"
                 android:textSize="30sp"
                 android:textIsSelectable="false"
-                android:textColor="#ffffff"
+                android:textColor="@color/primary_text"
                 android:id="@+id/stock"
                 android:layout_toLeftOf="@+id/textView3"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
             <TextView
-                android:paddingRight="5dp"
+                android:layout_below="@+id/description"
+                android:paddingRight="15dp"
+                android:paddingLeft="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
@@ -99,24 +120,33 @@
                 android:text="₹ 500"
                 android:textSize="30sp"
                 android:textIsSelectable="false"
-                android:textColor="#ffffff"
+                android:textColor="@color/primary_text"
                 android:id="@+id/textView3" />
             <TextView
-                android:paddingBottom="5dp"
-                android:paddingLeft="5dp"
+                android:paddingRight="15dp"
+                android:paddingLeft="15dp"
+                android:paddingBottom="15dp"
                 android:layout_below="@+id/stock"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Designer: Name"
                 android:textIsSelectable="false"
-                android:textColor="@color/colorAccent"/>
-        </RelativeLayout>
+                android:textColor="@color/accent"/>
 
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
+<android.support.v7.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="7dp"
+    android:layout_marginRight="7dp"
+    app:cardCornerRadius="4dp">
 <LinearLayout
-    android:paddingRight="5dp"
-    android:paddingTop="15dp"
-    android:paddingLeft="5dp"
+    android:paddingRight="2dp"
+
+    android:paddingTop="10dp"
+    android:paddingLeft="2dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -126,18 +156,27 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/similar_products"
-    android:textAppearance="?android:attr/textAppearanceLarge"
-    android:textColor="#ffea00"
+    android:textAppearance="?android:attr/textAppearanceMedium"
+    android:textColor="@color/primary_text"
     android:textStyle="bold" />
 <View
     android:layout_width="match_parent"
     android:layout_height="1dp"
-    android:background="#ffea00" />
+    android:background="@color/divider" />
+
 </LinearLayout>
+        </android.support.v7.widget.CardView>
+<android.support.v7.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="7dp"
+    android:layout_marginRight="7dp"
+    app:cardCornerRadius="4dp"
+    >
         <LinearLayout
-            android:paddingRight="5dp"
-            android:paddingBottom="5dp"
-            android:paddingLeft="5dp"
+            android:paddingRight="2dp"
+            android:paddingTop="10dp"
+            android:paddingLeft="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -146,14 +185,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/related_products"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#ffea00"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/primary_text"
                 android:textStyle="bold" />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="#ffea00" />
+                android:background="@color/divider" />
         </LinearLayout>
+        </android.support.v7.widget.CardView>
 </LinearLayout>
 </ScrollView>
 </RelativeLayout>
