--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#814112</color>
+    <color name="colorPrimary">#ffffffff</color>
     <color name="colorPrimaryDark">#ffe0b2</color>
     <color name="colorAccent">#7C4DFF</color>
-    <color name="colorPrimaryLight">#fecda9</color>
+    <color name="colorPrimaryLight">#ffffffff</color>
 
     <color name="whiteBackground">#50ffffff</color>
     <color name="labelBackground">#7f7e57c2</color>
+
+
+    <color name="primary">#FF9800</color>
+    <color name="primary_dark">#F57C00</color>
+    <color name="primary_light">#FFE0B2</color>
+    <color name="accent">#536DFE</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#727272</color>
+    <color name="icons">#212121</color>
+    <color name="divider">#B6B6B6</color>
+    <color name="background">#eeeeee</color>
 
 </resources>
