Boutique Details screen

--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -44,6 +44,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="7dp"
+    android:layout_marginTop="7dp"
     android:layout_marginRight="7dp"
     app:cardCornerRadius="4dp">
     <RelativeLayout
