--- a/app/src/main/res/drawable/bg.xml
+++ b/app/src/main/res/drawable/bg.xml
@@ -4,7 +4,7 @@
     <shape>
         <gradient
             android:angle="90"
-            android:startColor="@color/primary_light"
+            android:startColor="@color/background"
             android:endColor="@color/primary"
             android:type="linear" />
     </shape>
