--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:yourapp="http://schemas.android.com/apk/res-auto">
-    <!--<item
-        android:id="@+id/action_search"
-        android:icon="@android:drawable/ic_menu_search"
-
-        android:title="Search"
-        android:actionLayout="@layout/searchbar"
-        yourapp:showAsAction="always" />-->
-
     <item android:id="@+id/user"
         android:icon="@drawable/user"
         android:title="User"
         yourapp:showAsAction="always"/>
+    <item
+        android:id="@+id/boutique"
+        android:icon="@drawable/shop"
+        android:title="Boutique"
+        yourapp:showAsAction="ifRoom" />
+
 </menu>
