--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -133,7 +133,8 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Designer: Name"
                 android:textIsSelectable="false"
-                android:textColor="@color/accent"/>
+                android:textColor="@color/accent"
+                android:id="@+id/view_designer" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
