--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -44,8 +44,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="7dp"
-    android:layout_marginTop="7dp"
+    android:layout_marginTop="5dp"
     android:layout_marginRight="7dp"
+    android:layout_marginBottom="5dp"
     app:cardCornerRadius="4dp">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -142,7 +143,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="7dp"
+    android:layout_marginTop="5dp"
     android:layout_marginRight="7dp"
+    android:layout_marginBottom="5dp"
     app:cardCornerRadius="4dp">
 <LinearLayout
     android:paddingRight="2dp"
@@ -172,7 +175,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="7dp"
+    android:layout_marginTop="5dp"
     android:layout_marginRight="7dp"
+    android:layout_marginBottom="5dp"
     app:cardCornerRadius="4dp"
     >
         <LinearLayout
