--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -31,19 +31,19 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/email"
+            android:text="@string/mob_no"
             android:id="@+id/nameText"
             android:layout_below="@+id/imageView"
-            android:textColor="#000000" />
+            android:textColor="@color/primary_text" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/emailLogin"
+            android:id="@+id/mobLogin"
+            android:inputType="phone"
             android:layout_below="@+id/nameText"
             android:layout_alignLeft="@+id/nameText"
             android:layout_alignStart="@+id/nameText"
-            android:inputType="textEmailAddress"
             android:maxLines="1"
             android:maxLength="40"
             android:layout_alignRight="@+id/nameText"
@@ -55,10 +55,10 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/password"
             android:id="@+id/passText"
-            android:layout_below="@+id/emailLogin"
-            android:layout_alignLeft="@+id/emailLogin"
-            android:layout_alignStart="@+id/emailLogin"
-            android:textColor="#000000" />
+            android:layout_below="@+id/mobLogin"
+            android:layout_alignLeft="@+id/mobLogin"
+            android:layout_alignStart="@+id/mobLogin"
+            android:textColor="@color/primary_text" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -69,8 +69,8 @@
             android:layout_below="@+id/passText"
             android:layout_alignLeft="@+id/passText"
             android:layout_alignStart="@+id/passText"
-            android:layout_alignRight="@+id/emailLogin"
-            android:layout_alignEnd="@+id/emailLogin"
+            android:layout_alignRight="@+id/mobLogin"
+            android:layout_alignEnd="@+id/mobLogin"
             android:maxLength="20"/>
 
         <Button
@@ -120,7 +120,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="@string/user_name"
                 android:id="@+id/textView3"
                 android:textColor="@color/secondary_text"
@@ -144,7 +144,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="@string/password"
                 android:textColor="@color/secondary_text"
                 android:id="@+id/textView4"
@@ -168,7 +168,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="@string/password_again"
                 android:textColor="@color/secondary_text"
                 android:id="@+id/textView5"
@@ -189,7 +189,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="@string/mob_no"
                 android:id="@+id/textView6"
                 android:layout_below="@+id/password2_signup"
@@ -213,7 +213,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="@string/email"
                 android:id="@+id/textView7"
                 android:textColor="@color/secondary_text"
@@ -235,7 +235,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="@string/dob"
                 android:id="@+id/textView8"
                 android:textColor="@color/secondary_text"
@@ -252,7 +252,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="@string/anniversary"
                 android:id="@+id/textView9"
                 android:textColor="@color/secondary_text"
@@ -307,10 +307,246 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:onClick="sign_up_cancel"
-                android:background="@color/divider"
+                android:background="@color/accent"
                 android:textColor="@android:color/white"/>
-
         </RelativeLayout>
         </android.support.v7.widget.CardView>
     </ScrollView>
+
+    <!--=============================== User Details screen=================================-->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/bg"
+        android:id="@+id/UserDetails"
+        android:visibility="gone">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            app:cardCornerRadius="4dp"
+            >
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Good Morning..."
+                    android:id="@+id/greeting"
+                    android:textColor="@color/primary_text"
+                    android:padding="10dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="User Name"
+                    android:id="@+id/user_name"
+                    android:textColor="@color/primary_text"
+                    android:paddingLeft="0dp"
+                    android:paddingTop="10dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@+id/greeting"
+                    android:layout_toEndOf="@+id/greeting" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="You have"
+                    android:id="@+id/textView1"
+                    android:textColor="@color/primary_text"
+                    android:paddingTop="10dp"
+                    android:paddingLeft="10dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_below="@+id/greeting"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:id="@+id/points"
+                    android:textColor="#d500f9"
+                    android:textSize="40sp"
+                    android:layout_below="@+id/textView1"
+                    android:layout_centerHorizontal="true"
+                    android:textStyle="bold"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="points"
+                    android:id="@+id/textView2"
+                    android:textColor="@color/primary_text"
+                    android:paddingBottom="10dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_below="@+id/points"
+                    android:layout_centerHorizontal="true"
+                    />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/divider"
+                    android:layout_below="@+id/textView2"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:id="@+id/divider2"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Your loyalty card number is"
+                    android:id="@+id/textView10"
+                    android:textColor="@color/secondary_text"
+                    android:padding="10dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_below="@+id/divider2"
+                    android:layout_centerHorizontal="true"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2147483647"
+                    android:id="@+id/loyalty_card_number"
+                    android:textColor="@color/primary_text"
+                    android:paddingBottom="10dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_below="@+id/textView10"
+                    android:layout_centerHorizontal="true"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="4dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/mob_no"
+                    android:id="@+id/textView11"
+                    android:textColor="@color/primary_text"
+                    android:padding="10dp"
+                    android:layout_alignBottom="@+id/mobile_no"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="9999999999"
+                    android:id="@+id/mobile_no"
+                    android:textColor="@color/primary_text"
+                    android:padding="10dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@+id/textView11"
+                    android:layout_toEndOf="@+id/textView11" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/email"
+                    android:id="@+id/textView12"
+                    android:textColor="@color/primary_text"
+                    android:padding="10dp"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:layout_alignBottom="@+id/email"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="email@server.com"
+                    android:id="@+id/email"
+                    android:textColor="@color/primary_text"
+                    android:padding="10dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_below="@+id/mobile_no"
+                    android:layout_alignLeft="@+id/mobile_no"
+                    android:layout_alignStart="@+id/mobile_no"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dob"
+                    android:id="@+id/textView13"
+                    android:textColor="@color/primary_text"
+                    android:padding="10dp"
+                    android:layout_alignBottom="@+id/dob"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="01-01-2016"
+                    android:id="@+id/dob"
+                    android:textColor="@color/primary_text"
+                    android:padding="10dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_below="@+id/email"
+                    android:layout_alignLeft="@+id/mobile_no"
+                    android:layout_alignStart="@+id/mobile_no"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/anniversary"
+                    android:id="@+id/textView14"
+                    android:textColor="@color/primary_text"
+                    android:padding="10dp"
+                    android:layout_alignBottom="@+id/anniversary"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="01-01-2016"
+                    android:id="@+id/anniversary"
+                    android:textColor="@color/primary_text"
+                    android:padding="10dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_below="@+id/dob"
+                    android:layout_alignLeft="@+id/mobile_no"
+                    android:layout_alignStart="@+id/mobile_no"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/logout"
+                    android:id="@+id/logout"
+                    android:textColor="@color/accent"
+                    android:paddingRight="10dp"
+                    android:layout_below="@+id/anniversary"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:layout_alignParentRight="true"
+                    android:onClick="logout"
+                    android:clickable="true"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Delete account"
+                    android:id="@+id/delete_account"
+                    android:textColor="@color/accent"
+                    android:paddingRight="10dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="10dp"
+                    android:layout_below="@+id/logout"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:layout_alignParentRight="true"
+                    android:clickable="true"/>
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
+
+        </LinearLayout>
+    </ScrollView>
+
 </RelativeLayout>
