--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.tech.thrithvam.boutiqueapp.Home"
     android:animateLayoutChanges="true"
     android:background="@drawable/bg">
+
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -237,4 +242,14 @@
 
         </LinearLayout>
 </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
-</RelativeLayout>
+    </FrameLayout>
+    <ListView
+        android:id="@+id/left_drawer"
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@color/divider"
+        android:dividerHeight="0.5dp"
+        android:background="@android:color/white"/>
+</android.support.v4.widget.DrawerLayout>
