--- a/app/src/main/res/layout/activity_grid_of_products.xml
+++ b/app/src/main/res/layout/activity_grid_of_products.xml
@@ -11,7 +11,16 @@
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-</FrameLayout>
+
+        <GridView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:numColumns="2"
+            android:verticalSpacing="10dp"
+            android:horizontalSpacing="10dp"
+            android:scrollbarStyle="outsideOverlay"
+            android:id="@+id/productGrid"/>
+    </FrameLayout>
                     <RelativeLayout
                         android:layout_width="280dp"
                         android:layout_height="match_parent"
