--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 
     <color name="whiteBackground">#50ffffff</color>
     <color name="labelBackground">#7fF57C00</color>
+    <color name="offerlabelBackground">#7f536DFE</color>
 
 
     <color name="primary">#FF9800</color>
