--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -42,21 +42,17 @@
 
 
         </RelativeLayout>
-        <TextView
-            android:id="@+id/offerTxt"
-            android:layout_gravity="center"
-            android:textAlignment="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:text="Offer!!"
-            android:textColor="@android:color/white"
-            android:maxLines="1"
-            android:background="@color/offerlabelBackground"
-            android:layout_alignTop="@+id/gridImg"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:visibility="gone"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:id="@+id/offer"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:src="@drawable/offerlabel"
+            android:scaleType="fitStart"/>
+
     </RelativeLayout>
 
 </LinearLayout>
