--- a/app/src/main/res/layout/homescreen_items.xml
+++ b/app/src/main/res/layout/homescreen_items.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         android:paddingBottom="2dp"
         android:paddingTop="2dp"
@@ -21,21 +21,21 @@
             android:scaleType="centerCrop"/>
 
 
-            <TextView
-                android:id="@+id/gridTxt"
-                android:layout_gravity="center"
-                android:textAlignment="center"
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:text="TextView"
-                android:textColor="@android:color/white"
-                android:maxLines="2"
-                android:background="@color/labelBackground"
-                android:layout_alignBottom="@+id/gridImg"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+        <TextView
+            android:id="@+id/gridTxt"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:text="TextView"
+            android:textColor="@android:color/white"
+            android:maxLines="2"
+            android:background="@color/labelBackground"
+            android:layout_alignBottom="@+id/gridImg"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
 
         <ImageView
