--- a/app/src/main/res/layout/products_of_category.xml
+++ b/app/src/main/res/layout/products_of_category.xml
@@ -9,7 +9,8 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
-    app:cardCornerRadius="4dp">
+    app:cardCornerRadius="4dp"
+    app:cardBackgroundColor="@color/whiteBackground">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
