--- a/app/src/main/res/layout/activity_boutique_details.xml
+++ b/app/src/main/res/layout/activity_boutique_details.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.tech.thrithvam.boutiqueapp.BoutiqueDetails"
-    android:background="@color/background"
+    android:background="@drawable/bg"
     android:animateLayoutChanges="true">
     <FrameLayout
         android:id="@+id/content_frame"
