--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -83,6 +83,11 @@
                 android:layout_height="40dp"
                 android:id="@+id/share"
                 android:src="@drawable/share" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:id="@+id/review"
+                android:src="@drawable/review" />
         </LinearLayout>
         <TextView
             android:layout_below="@+id/fav_share_buttons"
@@ -121,9 +126,10 @@
                 android:textIsSelectable="false"
                 android:textColor="@color/primary_text"
                 android:id="@+id/stock"
-                android:layout_toLeftOf="@+id/textView3"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:layout_toLeftOf="@+id/price"
+                android:layout_toStartOf="@+id/price" />
             <TextView
                 android:layout_below="@+id/description"
                 android:paddingRight="15dp"
