designer and boutique images

--- a/app/src/main/res/layout/activity_boutique_details.xml
+++ b/app/src/main/res/layout/activity_boutique_details.xml
@@ -23,8 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:id="@+id/boutiqueImg"
-                android:background="@drawable/bg"/>
+                android:id="@+id/boutiqueImg"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
