--- a/app/src/main/res/layout/activity_owner_and_designer.xml
+++ b/app/src/main/res/layout/activity_owner_and_designer.xml
@@ -118,11 +118,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/primary_text"
-            android:paddingTop="50dp"
+            android:paddingTop="5dp"
             android:paddingLeft="15dp"
             android:paddingRight="10dp"
             android:text="@string/my_favorites"
             android:layout_below="@id/left_drawer"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
+        <TextView
+            android:id="@+id/ordersSideBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/primary_text"
+            android:paddingTop="5dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="10dp"
+            android:text="@string/my_orders_sidebar"
+            android:layout_below="@id/favorites"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
+        <TextView
+            android:id="@+id/trending"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/primary_text"
+            android:paddingTop="5dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="10dp"
+            android:text="@string/trending"
+            android:layout_below="@id/ordersSideBar"
             android:textAppearance="?android:attr/textAppearanceMedium"/>
     </RelativeLayout>
 </android.support.v4.widget.DrawerLayout>
