new arrivals slider

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -51,7 +51,7 @@
         android:orientation="vertical"
         >
         <com.daimajia.slider.library.SliderLayout
-            android:id="@+id/slider6"
+            android:id="@+id/newArrivals"
             android:layout_width="match_parent"
             android:layout_height="300dp"
 
